@@ -6,7 +6,8 @@ plugins {
 
 group = 'com.yogit'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -37,8 +38,26 @@ dependencies {
 
 	// JWT
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
+	// apple login
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 테스트 용
+	implementation 'org.apache.httpcomponents:httpclient'
+	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
+	implementation "org.bouncycastle:bcpkix-jdk15on:1.50"
+	implementation "org.apache.httpcomponents:httpclient:4.5.13"
+	implementation fileTree(dir: 'libs', include: '*.jar')
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// apple login
+tasks.withType(JavaCompile){
+	options.compilerArgs.addAll([
+			"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
+			"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+			"--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
+	])
 }
